# watson

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/resources/: main.css  resources.gresources.xml
client/resources/ui/: event_details.ui  notification.ui  notification_centre.ui  window.ui
client/src/: connection.rs  main.rs
client/src/config/: mod.rs  structs.rs
client/src/ui/: mod.rs  window.rs
client/src/ui/g_templates/: event_details.rs  main_window.rs  mod.rs  notification.rs  notification_centre.rs  notification_obj.rs
client/src/ui/utils/: icon_loader.rs  mod.rs
client/src/ui/widgets/: battery.rs  button.rs  calendar.rs  clock.rs  interactives.rs  mod.rs  notifications.rs  slider.rs  utils.rs
client/src/ui/widgets/calendar/: builder.rs  cache.rs  context.rs  data_store.rs  mod.rs  renderer.rs  types.rs
client/src/ui/widgets/utils/: animation.rs  backend_functions.rs  interactives.rs  mod.rs  render.rs
common/: Cargo.toml
common/src/: lib.rs  notification.rs  protocol.rs  tokio.rs
common/src/auth/: credentials.rs  mod.rs  structs.rs  tui.rs
common/src/calendar/: icloud.rs  mod.rs  protocol.rs
common/src/calendar/google/: auth.rs  fetch.rs  mod.rs
common/src/calendar/icloud/: fetch.rs  mod.rs  protocol.rs  utils.rs
common/src/calendar/utils/: cal_dav_event.rs  funcs.rs  structs.rs
common/src/config/: flags.rs
common/src/errors/: mod.rs
common/src/utils/: errors.rs  paths.rs
crates/suite-223b/: Cargo.toml
crates/suite-223b/src/: lib.rs  notification.rs  protocol.rs  tokio.rs
crates/suite-223b/src/auth/: mod.rs
crates/suite-223b/src/calendar/google/: fetch.rs  mod.rs
crates/suite-223b/src/calendar/icloud/: fetch.rs
crates/suite-223b/src/calendar/utils/: cal_dav_event.rs  mod.rs  structs.rs
crates/suite-223b/src/daemon/: mod.rs  notifications.rs  power_mode.rs
daemon/: Cargo.toml
daemon/src/: main.rs  notify.rs  service_reg.rs
daemon/src/core/: registry.rs
daemon/src/hardware/: audio.rs  backlight.rs  mod.rs  network.rs  power.rs
daemon/src/notify/: mod.rs
daemon/src/software/: calendar.rs  mod.rs
daemon/src/utils/: command.rs
deployment/: watson-daemon.service
docs/widgets/: calendar.md
