[package]
name = "client"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[[bin]]
name = "watson"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
common = { path = "../common" }
gtk4 = { version = "0.10.3", features = ["v4_6", "v4_12",] }
gtk4-layer-shell = "0.7.1"
serde_json = "1.0"
tokio = "1.48.0"
