[package]
name = "client"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[[bin]]
name = "watson"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
chrono = "0.4.42"
gtk4 = { version = "0.10.3", default-features = false, features = ["v4_12"] }
gtk4-layer-shell = "0.7.1"
tokio = {version = "1.48.0", default-features = false, features = ["macros"]}
serde_json = "1.0"
serde = "1.0.228"
chrono-tz = "0.10.4"
strum = "0.27.2"
bincode = "1.3"
