[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.228", default-features = false, features = ["derive"]}
tokio = {version = "1.48.0", default-features = false, features = ["net", "rt-multi-thread", "macros", "io-util"]}
zbus = {version = "5.12.0", default-features = false, features = ["tokio"]}
ical = "0.11.0"
memchr = "2.7.6"
quick-xml = "0.38.4"
reqwest = "0.12.26"
chrono = "0.4.42"
chrono-tz = "0.10.4"
