[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "watson-daemon"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
serde_json = "1.0"
tokio = {version = "1.48.0", default-features = false, features = ["macros"]}
zbus = {version = "5.12.0", default-features = false, features = ["tokio"]}
