[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "watson-daemon"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
common = { path = "../common" }
futures-util = "0.3.31"
serde_json = "1.0"
strum = "0.27.2"
tokio = {version = "1.48.0", default-features = false, features = ["macros"]}
zbus = {version = "5.12.0", default-features = false, features = ["tokio"]}
bincode = "1.3"
libpulse-binding = "2.30.1"
libc = "0.2.180"
